@@ -1,5 +1,9 @@
 2008-05-22  Corinna Vinschen  <corinna@vinschen.de>
 
+	* sec_acl.cc (setacl): Set errno to EINVAL if user or group don't exist.
+
+2008-05-22  Corinna Vinschen  <corinna@vinschen.de>
+
 	* path.cc (cygwin_conv_path): Define tp before setting up faul handler.
 	* syscalls.cc: Ditto, throughout.
 	(gen_full_path_at): Add bool parameter to allow NULL pathname.
